# arithmetic-evaluator

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  index.html
master/: aliases.js  search-index.js  source-files.js
master/arithmetic_evaluator/: all.html  enum.Expr.html  fn.eval.html  fn.parser.html  index.html  sidebar-items.js
master/arithmetic_evaluator/eval/: fn.eval.html
master/arithmetic_evaluator/parser/: fn.parser.html
master/arithmetic_evaluator/types/: enum.Expr.html
master/implementors/core/cmp/: trait.PartialEq.js
master/implementors/core/fmt/: trait.Debug.js  trait.Display.js
master/implementors/core/marker/: trait.Send.js  trait.Sync.js
master/src/arithmetic_evaluator/: eval.rs.html  lib.rs.html  parser.rs.html  types.rs.html
src/: eval.rs  lib.rs  main.rs  parser.rs  types.rs  utils.rs
